# advent-of-code-2019

./: CMakeLists.txt  main.cpp
inputs/: day18.txt  day4.txt
problems/day1/: day1.cpp  day1.h
problems/day10/: solve.cpp  solve.h
problems/day11/: solve.cpp  solve.h
problems/day12/: solve.cpp  solve.h
problems/day13/: solve.cpp  solve.h
problems/day14/: solve.cpp  solve.h
problems/day15/: solve.cpp  solve.h
problems/day16/: solve.cpp  solve.h
problems/day17/: solve.cpp  solve.h
problems/day18/: solve.cpp  solve.h
problems/day19/: solve.cpp  solve.h
problems/day2/: day2.cpp  day2.h
problems/day20/: solve.cpp  solve.h
problems/day21/: solve.cpp  solve.h
problems/day22/: solve.cpp  solve.h
problems/day23/: solve.cpp  solve.h
problems/day24/: solve.cpp  solve.h
problems/day25/: manual.txt  solve.cpp  solve.h
problems/day3/: day3.cpp  day3.h
problems/day4/: day4.cpp  day4.h
problems/day5/: day5.cpp  day5.h
problems/day6/: day6.cpp  day6.h
problems/day7/: day7.cpp  day7.h
problems/day8/: day8.cpp  day8.h
problems/day9/: solve.cpp  solve.h
util/: infinite_array.h  intcode.h  mod_int.h
